@@ -1,5 +1,8 @@
+[B]2.0.3[/B]
+- Set mymovies.it internal search as default. Added <forum>, <website> and <source> tags for new xbmc addon section (addons.xbmc.org)
+
 [B]2.0.2[/B]
-- Added mymovies.it internal search, this option is acctivable in setting (thanks to mario.diraimondo for the patch - see issue 13)
+- Added mymovies.it internal search, this option is activable in setting (thanks to mario.diraimondo for the patch - see issue 13)
 
 [B]2.0.1[/B]
 - Fixed trailer: Update regex for change in some films pages
